tests/baselines/reference/varNameConflictsWithImportInDifferentPartOfModule.errors.txt
tests/cases/compiler/varNameConflictsWithImportInDifferentPartOfModule.ts(6,5): error TS2440: Import declaration conflicts with local declaration of 'q'.


==== tests/cases/compiler/varNameConflictsWithImportInDifferentPartOfModule.ts (1 errors) ====
    module M1 {
        export var q = 5;
        export var s = '';
    }
    module M1 {
        export import q = M1.s; // Should be an error but isn't
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'q'.
    }